In machine_learning_template.ipynb, Data Preprocessing > Saving Data > CSV section, import os

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -745,6 +745,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Imports\n",
+    "import os\n",
+    "\n",
     "# Create data directory if it doesn't exist\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
