In machine_learning_template.ipynb, Data Loading > CSV section, add data directory to file path and implement exception handling

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -198,7 +198,19 @@
    "outputs": [],
    "source": [
     "# Load data from a csv file into a Pandas DataFrame\n",
-    "df = pd.read_csv(\"your_csv_file_here.csv\")"
+    "try:\n",
+    "    df = pd.read_csv(\"data/your_csv_file_here.csv\")\n",
+    "    print(\"Data loaded successfully!\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Error: File not found. Please check the file path.\")\n",
+    "except pd.errors.EmptyDataError:\n",
+    "    print(\"Error: The file is empty.\")\n",
+    "except pd.errors.ParserError:\n",
+    "    print(\"Error: The file content could not be parsed as a CSV.\")\n",
+    "except PermissionError:\n",
+    "    print(\"Error: Permission denied when accessing the file.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")"
    ]
   },
   {
