In machine_learning_template.ipynb, Data Loading > MySQL section, implement exception handling

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -200,7 +200,7 @@
     "# Load data from a csv file into a Pandas DataFrame\n",
     "try:\n",
     "    df = pd.read_csv(\"data/your_csv_file_here.csv\")\n",
-    "    print(\"Data loaded successfully!\")\n",
+    "    print(\"Data loaded successfully.\")\n",
     "except FileNotFoundError:\n",
     "    print(\"Error: File not found. Please check the file path.\")\n",
     "except pd.errors.EmptyDataError:\n",
@@ -229,7 +229,7 @@
    "outputs": [],
    "source": [
     "# Imports \n",
-    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy import create_engine, exc\n",
     "\n",
     "# Database info\n",
     "mysql_host = \"localhost\"  # Default hostname for a MySQL server running locally\n",
@@ -237,12 +237,20 @@
     "mysql_database_name = \"your_mysql_database_name_here\"\n",
     "mysql_table_name = \"your_mysql_table_name_here\"\n",
     "\n",
-    "# Create an SQLAlchemy engine for interacting with the MySQL database\n",
-    "engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "try:\n",
+    "    # Create an SQLAlchemy engine for interacting with the MySQL database\n",
+    "    engine = create_engine(f\"mysql+mysqlconnector://{sql_username}:{sql_password}@{mysql_host}:{mysql_port}/{mysql_database_name}\")\n",
+    "    \n",
+    "    # Load data from MySQL database into a Pandas DataFrame\n",
+    "    with engine.connect() as connection:\n",
+    "        df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=connection)\n",
+    "    print(\"Data loaded successfully.\")\n",
     "\n",
-    "# Load data from MySQL database into a Pandas DataFrame\n",
-    "with engine.connect() as connection:\n",
-    "    df = pd.read_sql(f\"SELECT * FROM {mysql_table_name}\", con=connection)"
+    "except exc.SQLAlchemyError as e:\n",
+    "    print(f\"Database error occurred: {e}\")\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")"
    ]
   },
   {
