--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2645,6 +2645,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8dbbfb4-1435-430d-bce7-421044c7a460",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBRegressor(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter distributions \n",
+    "xgb_param_distributions = {\n",
+    "    'n_estimators': [100, 200, 300, 400, 500, 600, 700],  \n",
+    "    'max_depth': randint(3, 11),                \n",
+    "    'learning_rate': uniform(0.01, 0.4),       \n",
+    "    'subsample': uniform(0.5, 0.5),             \n",
+    "    'colsample_bytree': uniform(0.5, 0.5),      \n",
+    "    'gamma': uniform(0, 0.5),                     \n",
+    "    'min_child_weight': [1, 3, 5, 7],           \n",
+    "}\n",
+    "\n",
+    "# Initialize randomized search object\n",
+    "xgb_random_search = RandomizedSearchCV(\n",
+    "    estimator=xgb, \n",
+    "    param_distributions=xgb_param_distributions, \n",
+    "    n_iter=50,\n",
+    "    cv=5, \n",
+    "    scoring=\"neg_root_mean_squared_error\",  # use \"r2\" for R-squared or a custom function for MAPE\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit the random search to the training data\n",
+    "xgb_random_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bef98c90-8aca-4cea-abae-91730047696c",
    "metadata": {},
