In machine_learning_template.ipynb, in Modeling (Regression) > Hyperparameter Tuning > Random Search > Model 2, show top 10 hyperparameter combinations

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2680,6 +2680,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e01728c4-d5d3-4d2d-adf3-3460c72b7a14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of randomized search results\n",
+    "xgb_random_search_results = pd.DataFrame({\n",
+    "    \"validation_rmse\": -1 * xgb_random_search.cv_results_[\"mean_test_score\"],  # RMSE on validation data\n",
+    "    \"parameters\": xgb_random_search.cv_results_[\"params\"]  # parameter values\n",
+    "})\n",
+    "\n",
+    "# Extract each hyperparameter as a separate column\n",
+    "xgb_random_search_results[\"n_estimators\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "xgb_random_search_results[\"max_depth\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "xgb_random_search_results[\"learning_rate\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
+    "xgb_random_search_results[\"subsample\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"subsample\"])\n",
+    "xgb_random_search_results[\"colsample_bytree\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"colsample_bytree\"])\n",
+    "xgb_random_search_results[\"gamma\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"gamma\"])\n",
+    "xgb_random_search_results[\"min_child_weight\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"min_child_weight\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "xgb_random_search_results = xgb_random_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models \n",
+    "print(xgb_random_search_results.sort_values(\"validation_rmse\", ascending=False).head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bef98c90-8aca-4cea-abae-91730047696c",
    "metadata": {},
