--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3866,6 +3866,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f056b5a-43af-4c92-9adb-1e165ac291b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initialize model\n",
+    "xgb = XGBClassifier(random_state=42)\n",
+    "\n",
+    "# Define hyperparameter distributions \n",
+    "xgb_param_distributions = {\n",
+    "    'n_estimators': [100, 200, 300, 400, 500, 600, 700],  \n",
+    "    'max_depth': randint(3, 11),                \n",
+    "    'learning_rate': uniform(0.01, 0.4),       \n",
+    "    'subsample': uniform(0.5, 0.5),             \n",
+    "    'colsample_bytree': uniform(0.5, 0.5),      \n",
+    "    'gamma': uniform(0, 0.5),                     \n",
+    "    'min_child_weight': [1, 3, 5, 7],           \n",
+    "}\n",
+    "\n",
+    "# Initialize randomized search object\n",
+    "xgb_random_search = RandomizedSearchCV(\n",
+    "    estimator=xgb, \n",
+    "    param_distributions=xgb_param_distributions, \n",
+    "    n_iter=50,\n",
+    "    cv=5, \n",
+    "    scoring=\"accuracy\",  # use \"f1\", \"precision\", \"recall\" or \"roc_auc\" optionally\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# Fit the random search to the training data\n",
+    "xgb_random_search.fit(X_train_transformed, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18f5411d-1f7e-4026-a7c3-9af17259fa60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of randomized search results\n",
+    "xgb_random_search_results = pd.DataFrame({\n",
+    "    \"validation_accuracy\": xgb_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
+    "    \"parameters\": xgb_random_search.cv_results_[\"params\"]  # parameter values\n",
+    "})\n",
+    "\n",
+    "# Extract each hyperparameter as a separate column\n",
+    "xgb_random_search_results[\"n_estimators\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"n_estimators\"])\n",
+    "xgb_random_search_results[\"max_depth\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"max_depth\"])\n",
+    "xgb_random_search_results[\"learning_rate\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"learning_rate\"])\n",
+    "xgb_random_search_results[\"subsample\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"subsample\"])\n",
+    "xgb_random_search_results[\"colsample_bytree\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"colsample_bytree\"])\n",
+    "xgb_random_search_results[\"gamma\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"gamma\"])\n",
+    "xgb_random_search_results[\"min_child_weight\"] = xgb_random_search_results[\"parameters\"].apply(lambda x: x[\"min_child_weight\"])\n",
+    "\n",
+    "# Delete the parameters column\n",
+    "xgb_random_search_results = xgb_random_search_results.drop(\"parameters\", axis=1)\n",
+    "\n",
+    "# Show the top 10 best performing models \n",
+    "print(xgb_random_search_results.sort_values(\"validation_accuracy\", ascending=False).head(10))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "2a50d413-ace8-4005-b273-cae892faad54",
    "metadata": {},
