In machine_learning_template.ipynb, in Modeling (Classification) > Hyperparameter Tuning > Random Search > Model 1, fix error in calculation validation_accuracy for RandomForestClassifier

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3827,7 +3827,7 @@
    "source": [
     "# DataFrame of randomized search results\n",
     "rf_random_search_results = pd.DataFrame({\n",
-    "    \"validation_accuracy\": -1 * rf_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
+    "    \"validation_accuracy\": rf_random_search.cv_results_[\"mean_test_score\"],  # accuracy on validation data\n",
     "    \"parameters\": rf_random_search.cv_results_[\"params\"]  # parameter values\n",
     "})\n",
     "\n",
