--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4188,7 +4188,7 @@
     "    - Regression task: E.g., Linear Regression, Elastic Net Regression, K-Nearest Neighbors Regressor, Support Vector Regressor, Decision Tree Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
     "    - Classification task: E.g., Logistic Regression, Elastic Net Logistic Regression, K-Nearest Neighbors Classifier, Support Vector Classifier, Decision Tree Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
     "- **Hyperparameter tuning**:\n",
-    "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV`.\n",
+    "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
     "- **Select the final model** based on performance evaluation:\n",
     "    - Regression task: Using RMSE, MAPE, or R-squared as the evaluation metric with `sklearn` `mean_squared_error`, `mean_absolute_percentage_error`, or `r2_score`.\n",
     "    - Classification task: Using accuracy, precision, recall, or F1 score as the evaluation metric with `sklearn` `classification_report`, `confusion_matrix`, and `ConfusionMatrixDisplay`.\n",
@@ -4198,7 +4198,6 @@
     "    - As a .pkl file using `pickle`.\n",
     "\n",
     "## Next Steps\n",
-    "- Add RandomSearchCV for hyperparameter tuning.\n",
     "- Add unsupervised learning section with algorithms like K-Means Clustering, DBSCAN, and Principal Component Analysis (PCA).\n",
     "- Add model deployment as a web application with an interactive UI and API (e.g., using Gradio or Flask)."
    ]
