In machine_learning_template.ipynb, in Summary section, simplify the part on training baseline models in modeling section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4184,9 +4184,8 @@
     "\n",
     "## Modeling\n",
     "Use `sklearn`, `xgboost`, and `pickle` for model training, evaluation, and saving.\n",
-    "- **Train baseline models** to establish performance benchmarks:\n",
-    "    - Regression task: E.g., Linear Regression, Elastic Net Regression, K-Nearest Neighbors Regressor, Support Vector Regressor, Decision Tree Regressor, Random Forest Regressor, Multi-Layer Perceptron Regressor, and XGBoost Regressor using `sklearn` and `xgboost`.\n",
-    "    - Classification task: E.g., Logistic Regression, Elastic Net Logistic Regression, K-Nearest Neighbors Classifier, Support Vector Classifier, Decision Tree Classifier, Random Forest Classifier, Multi-Layer Perceptron Classifier, and XGBoost Classifier using `sklearn` and `xgboost`.\n",
+    "- **Train baseline models**:\n",
+    "    - Establish performance benchmarks with the following models using `sklearn` and `xgboost`: Linear Regression, Logistic Regression, Elastic Net Regression, K-Nearest Neighbors, Support Vector Machine, Decision Tree, Random Forest, Multi-Layer Perceptron, and XGBoost.\n",
     "- **Hyperparameter tuning**:\n",
     "    - Perform hyperparameter tuning using grid search with `sklearn` `GridSearchCV` or random search with `RandomizedSearchCV`.\n",
     "- **Select the final model** based on performance evaluation:\n",
