--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2834,10 +2834,51 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5accb07a-2b83-4083-9f5a-09a26c776ab1",
+   "metadata": {},
+   "source": [
+    "Feature Importance Plot: Random Forest "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be35c105-7fc4-46ac-9fdd-02c110a1d5e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the feature importances\n",
+    "# Note: final_model must be a random forest\n",
+    "importances = final_model.feature_importances_\n",
+    "\n",
+    "# Get the feature names \n",
+    "feature_names = X_train_transformed.columns  \n",
+    "\n",
+    "# Create a DataFrame to make it easier for Seaborn to plot\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    \"feature\": feature_names,\n",
+    "    \"importance\": importances\n",
+    "})\n",
+    "\n",
+    "# Sort features by importance\n",
+    "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
+    "\n",
+    "# Create feature importance plot of the top 10 features\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
+    "plt.title(\"Top 10 Feature Importances: Random Forest\")\n",
+    "plt.xlabel(\"Importance\")\n",
+    "plt.ylabel(\"Features\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83c656ef-62d4-4836-b919-c85e8549c92d",
    "metadata": {},
    "source": [
-    "XGBoost Feature Importance Plot:"
+    "Feature Importance Plot: XGBoost "
    ]
   },
   {
