--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2837,7 +2837,7 @@
    "id": "5accb07a-2b83-4083-9f5a-09a26c776ab1",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: Random Forest "
+    "Feature Importance Plot: Decision Tree or Random Forest "
    ]
   },
   {
@@ -2848,7 +2848,7 @@
    "outputs": [],
    "source": [
     "# Get the feature importances\n",
-    "# Note: final_model must be a random forest\n",
+    "# Note: final_model must be a decision tree or a random forest\n",
     "importances = final_model.feature_importances_\n",
     "\n",
     "# Get the feature names \n",
@@ -2866,7 +2866,7 @@
     "# Create feature importance plot of the top 10 features\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
-    "plt.title(\"Top 10 Feature Importances: Random Forest\")\n",
+    "plt.title(\"Top 10 Feature Importances\")\n",
     "plt.xlabel(\"Importance\")\n",
     "plt.ylabel(\"Features\")\n",
     "plt.tight_layout()\n",
@@ -4085,7 +4085,7 @@
    "id": "361e810d-595c-42bb-a0d6-29284c45feaa",
    "metadata": {},
    "source": [
-    "Feature Importance Plot: Random Forest "
+    "Feature Importance Plot: Decision Tree or Random Forest "
    ]
   },
   {
@@ -4096,7 +4096,7 @@
    "outputs": [],
    "source": [
     "# Get the feature importances\n",
-    "# Note: final_model must be a random forest\n",
+    "# Note: final_model must be a decision tree or a random forest\n",
     "importances = final_model.feature_importances_\n",
     "\n",
     "# Get the feature names \n",
@@ -4114,7 +4114,7 @@
     "# Create feature importance plot of the top 10 features\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
-    "plt.title(\"Top 10 Feature Importances: Random Forest\")\n",
+    "plt.title(\"Top 10 Feature Importances\")\n",
     "plt.xlabel(\"Importance\")\n",
     "plt.ylabel(\"Features\")\n",
     "plt.tight_layout()\n",
