In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Feature Importance section, add feature importance plot for linear and elastic net regression

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2834,6 +2834,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e213a79d-0735-4b91-a7f1-3b6275c10cd7",
+   "metadata": {},
+   "source": [
+    "Feature Importance Plot: Linear Regression or Elastic Net Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eb70cf5-e06d-4ec0-9d00-a582a3f5b537",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the coefficients\n",
+    "# Note: final_model must be LinearRegression or ElasticNet\n",
+    "coefficients = final_model.coef_\n",
+    "\n",
+    "# Get the feature names \n",
+    "feature_names = X_train_transformed.columns  \n",
+    "\n",
+    "# Create a DataFrame to make it easier for Seaborn to plot\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    \"feature\": feature_names,\n",
+    "    \"importance\": np.abs(coefficients)\n",
+    "})\n",
+    "\n",
+    "# Sort features by importance\n",
+    "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
+    "\n",
+    "# Create feature importance plot of the top 10 features\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
+    "plt.title(\"Top 10 Feature Importances\")\n",
+    "plt.xlabel(\"Importance (Absolute Coefficients)\")\n",
+    "plt.ylabel(\"Features\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5accb07a-2b83-4083-9f5a-09a26c776ab1",
    "metadata": {},
    "source": [
