In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Feature Importance section, add feature importance plot for logistic and elastic net regression

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4123,6 +4123,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "111b5614-426b-4f8d-a57e-7a6e6a3f6e66",
+   "metadata": {},
+   "source": [
+    "Feature Importance Plot: Logistic Regression or Elastic Net Logistic Regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9359019a-e069-4637-9df6-659467b197fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the coefficients\n",
+    "# Note: final_model must be LogisticRegression \n",
+    "coefficients = final_model.coef_\n",
+    "\n",
+    "# Get the feature names \n",
+    "feature_names = X_train_transformed.columns  \n",
+    "\n",
+    "# Create a DataFrame to make it easier for Seaborn to plot\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    \"feature\": feature_names,\n",
+    "    \"importance\": np.abs(coefficients)\n",
+    "})\n",
+    "\n",
+    "# Sort features by importance\n",
+    "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
+    "\n",
+    "# Create feature importance plot of the top 10 features\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
+    "plt.title(\"Top 10 Feature Importances\")\n",
+    "plt.xlabel(\"Importance (Absolute Coefficients)\")\n",
+    "plt.ylabel(\"Features\")\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "361e810d-595c-42bb-a0d6-29284c45feaa",
    "metadata": {},
    "source": [
