In machine_learning_template.ipynb, in Modeling (Regression) > Final Model section, add section for illustrative examples

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2957,6 +2957,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0a515b3-5e16-4026-b235-a322c152389f",
+   "metadata": {},
+   "source": [
+    "### Illustrative Examples\n",
+    "These examples from the test set show the model's predictions on unseen data.  \n",
+    "Note: If you have a lot of features, you may want to select the 5-10 most important ones for the illustrative examples.\n",
+    "\n",
+    "| Size (m²) | Bedrooms | Bathrooms | Property Type | Neighborhood    | Built Year | Furnishing | Heating   | True Price (€) | Predicted Price (€) |\n",
+    "|:----------|:-------- |:--------- |:--------------|:----------------|:-----------|:---------- |:---------- |:---------------|:--------------------|\n",
+    "| 80        | 2        | 1         | Apartment     | Prenzlauer Berg | 1990       | Yes        | Gas       | 1200           | 1180                |\n",
+    "| 120       | 3        | 2         | House         | Charlottenburg  | 2005       | No         | Electric  | 2500           | 2550                |\n",
+    "| 100       | 3        | 1         | Apartment     | Kreuzberg       | 2010       | Yes        | Gas       | 2000           | 2050                |\n",
+    "| 150       | 4        | 3         | House         | Mitte           | 2018       | Yes        | Gas       | 3500           | 3400                |\n",
+    "| 75        | 1        | 1         | Studio        | Neukölln        | 1995       | No         | Electric  | 1000           | 1020                |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
