In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Illustrative Examples section, update description and example table in markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2961,16 +2961,20 @@
    "metadata": {},
    "source": [
     "### Illustrative Examples\n",
-    "These examples from the test set show the model's predictions on unseen data.  \n",
-    "Note: If you have a lot of features, you may want to select the 5-10 most important ones for the illustrative examples.\n",
+    "Show examples of model predictions from the test data to demonstrate model performance on unseen data.  \n",
+    "The goal is to give stakeholders a clear picture of when the model performs well and when it struggles. \n",
     "\n",
-    "| Size (m²) | Bedrooms | Bathrooms | Property Type | Neighborhood    | Built Year | Furnishing | Heating   | True Price (€) | Predicted Price (€) |\n",
-    "|:----------|:-------- |:--------- |:--------------|:----------------|:-----------|:---------- |:---------- |:---------------|:--------------------|\n",
-    "| 80        | 2        | 1         | Apartment     | Prenzlauer Berg | 1990       | Yes        | Gas       | 1200           | 1180                |\n",
-    "| 120       | 3        | 2         | House         | Charlottenburg  | 2005       | No         | Electric  | 2500           | 2550                |\n",
-    "| 100       | 3        | 1         | Apartment     | Kreuzberg       | 2010       | Yes        | Gas       | 2000           | 2050                |\n",
-    "| 150       | 4        | 3         | House         | Mitte           | 2018       | Yes        | Gas       | 3500           | 3400                |\n",
-    "| 75        | 1        | 1         | Studio        | Neukölln        | 1995       | No         | Electric  | 1000           | 1020                |\n"
+    "Recommendations: \n",
+    "- Show 5-10 diverse examples like best, worst, typical, and edge cases.\n",
+    "- Show 2-5 most important features, actual vs. predicted values, and errors (absolute or percentage).\n",
+    "\n",
+    "| Size (m²) | Bedrooms | Neighborhood    | Built Year | Actual Price (€) | Predicted Price (€) |\n",
+    "|:--------- |:-------- |:--------------- |:---------- |:---------------- |:------------------- |\n",
+    "| 80        | 2        | Prenzlauer Berg | 1990       | 1200             | 1180                |\n",
+    "| 120       | 3        | Charlottenburg  | 2005       | 2500             | 2550                |\n",
+    "| 100       | 3        | Kreuzberg       | 2010       | 2000             | 2050                |\n",
+    "| 150       | 4        | Mitte           | 2018       | 3500             | 3400                |\n",
+    "| 75        | 1        | Neukölln        | 1995       | 1000             | 1020                |\n"
    ]
   },
   {
