In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Illustrative Examples section, update description in markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2961,12 +2961,12 @@
    "metadata": {},
    "source": [
     "### Illustrative Examples\n",
-    "Show examples of model predictions from the test data to demonstrate model performance on unseen data.  \n",
-    "The goal is to give stakeholders a clear picture of when the model performs well and when it struggles. \n",
-    "\n",
-    "Recommendations: \n",
-    "- Show 5-10 diverse examples like best, worst, typical, and edge cases.\n",
-    "- Show 2-5 most important features, actual vs. predicted values, and errors (absolute or percentage).\n",
+    "- Show examples of model predictions from test data to demonstrate performance on unseen data.  \n",
+    "- Goal is to give stakeholders a clear picture of when the model performs well and when it struggles. \n",
+    "- Recommendations: \n",
+    "    - Show 5-10 diverse examples: Best cases, worst cases, typical cases, edge cases.\n",
+    "    - Show 2-5 most important features, actual vs. predicted values, and errors.\n",
+    "- Example table:\n",
     "\n",
     "| Size (m²) | Bedrooms | Neighborhood    | Built Year | Actual Price (€) | Predicted Price (€) |\n",
     "|:--------- |:-------- |:--------------- |:---------- |:---------------- |:------------------- |\n",
