In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Illustrative Examples section, add error to example table and update markdown comments

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2961,20 +2961,21 @@
    "metadata": {},
    "source": [
     "### Illustrative Examples\n",
-    "- Show examples of model predictions from test data to demonstrate performance on unseen data.  \n",
-    "- Goal is to give stakeholders a clear picture of when the model performs well and when it struggles. \n",
+    "Show examples of model predictions from test data to demonstrate performance on unseen data.  \n",
+    "- Goal: Give stakeholders a clear picture of when the model performs well and when it struggles. \n",
     "- Recommendations: \n",
     "    - Show 5-10 diverse examples: Best cases, worst cases, typical cases, edge cases.\n",
     "    - Show 2-5 most important features, actual vs. predicted values, and errors.\n",
+    "    - Add notes about any interesting patterns or edge cases observed.\n",
     "- Example table:\n",
     "\n",
-    "| Size (m²) | Bedrooms | Neighborhood    | Built Year | Actual Price (€) | Predicted Price (€) |\n",
-    "|:--------- |:-------- |:--------------- |:---------- |:---------------- |:------------------- |\n",
-    "| 80        | 2        | Prenzlauer Berg | 1990       | 1200             | 1180                |\n",
-    "| 120       | 3        | Charlottenburg  | 2005       | 2500             | 2550                |\n",
-    "| 100       | 3        | Kreuzberg       | 2010       | 2000             | 2050                |\n",
-    "| 150       | 4        | Mitte           | 2018       | 3500             | 3400                |\n",
-    "| 75        | 1        | Neukölln        | 1995       | 1000             | 1020                |\n"
+    "| Size (m²) | Bedrooms | Neighborhood    | Built Year | Actual Price (€) | Predicted Price (€) | Error (%) |\n",
+    "|:--------- |:-------- |:--------------- |:---------- |:---------------- |:------------------- |:--------- |\n",
+    "| 80        | 2        | Prenzlauer Berg | 1990       | 1200             | 1205                | +0.4      |\n",
+    "| 120       | 3        | Charlottenburg  | 2005       | 2500             | 2100                | -16.0     |\n",
+    "| 100       | 3        | Kreuzberg       | 2010       | 2000             | 2060                | +3.0      |\n",
+    "| 150       | 4        | Mitte           | 2018       | 3500             | 4000                | +14.3     |\n",
+    "| 75        | 1        | Neukölln        | 1995       | 1000             | 1030                | +3.0      |\n"
    ]
   },
   {
