--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2980,6 +2980,39 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6a3ea3f4-6f7f-4500-b24e-9c83c2b9e572",
+   "metadata": {},
+   "source": [
+    "**Plot: Actual vs. Predicted Values**  \n",
+    "While individual examples (best, worst, typical, and edge cases) offer insights into individual scenarios, this plot provides context for understanding overall model performance and reveals trends like consistent underprediction or overprediction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceca4c0f-80ee-4f41-b594-73c0ee288d68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot: Actual vs. predicted values\n",
+    "plt.figure(figsize=(7, 5), dpi=150)\n",
+    "plt.scatter(y_test, y_test_pred)\n",
+    "plt.plot([min(y_test), max(y_test)], \n",
+    "         [min(y_test), max(y_test)], \n",
+    "         color=\"red\", \n",
+    "         linestyle=\"--\", \n",
+    "         label=\"Perfect Prediction\")  # Diagonal reference line\n",
+    "plt.title(\"Actual vs. Predicted Values\", fontsize=14)\n",
+    "plt.xlabel(\"Actual Values\", fontsize=12)\n",
+    "plt.ylabel(\"Predicted Values\", fontsize=12)\n",
+    "plt.grid(True, linestyle=\"--\", alpha=0.6)\n",
+    "plt.legend() \n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "661472f1-6c53-4270-a381-f96641708735",
    "metadata": {},
    "source": [
