In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, add subsection to identify best, worst, typical, and edge cases with code to calculate errors

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2980,6 +2980,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bfbb9e4a-e3f6-4107-ae0e-5ffe1d4fa3ac",
+   "metadata": {},
+   "source": [
+    "**Identify best, worst, typical and edge cases**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4e8a0530-63a1-4ea9-939c-c5788fa4486c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate errors (test data set)\n",
+    "errors = [actual_value - predicted_value for actual_value, predicted_value in zip(y_test, y_test_pred)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6a3ea3f4-6f7f-4500-b24e-9c83c2b9e572",
    "metadata": {},
    "source": [
