In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, combine X_test, y_test, and y_test_pred to pandas df

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2983,7 +2983,7 @@
    "id": "bfbb9e4a-e3f6-4107-ae0e-5ffe1d4fa3ac",
    "metadata": {},
    "source": [
-    "**Identify best, worst, typical and edge cases**"
+    "**Identify best, worst, typical, and edge cases**"
    ]
   },
   {
@@ -2993,6 +2993,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
+    "df_test = X_test.copy()\n",
+    "df_test[\"Actual\"] = y_test\n",
+    "df_test[\"Predicted\"] = y_test_pred\n",
+    "\n",
     "# Calculate errors (test data set)\n",
     "errors = [actual_value - predicted_value for actual_value, predicted_value in zip(y_test, y_test_pred)]"
    ]
