In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, calculate error, absolute error and percentage error

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2998,8 +2998,10 @@
     "df_test[\"Actual\"] = y_test\n",
     "df_test[\"Predicted\"] = y_test_pred\n",
     "\n",
-    "# Calculate errors (test data set)\n",
-    "errors = [actual_value - predicted_value for actual_value, predicted_value in zip(y_test, y_test_pred)]"
+    "# Calculate errors \n",
+    "df_test[\"Error\"] = df_test[\"Actual\"] - df_test[\"Predicted\"]\n",
+    "df_test[\"Absolute Error\"] = np.abs(df_test[\"Actual\"] - df_test[\"Predicted\"])\n",
+    "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100"
    ]
   },
   {
