In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, add code to show best and worst cases

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3001,7 +3001,13 @@
     "# Calculate errors \n",
     "df_test[\"Error\"] = df_test[\"Actual\"] - df_test[\"Predicted\"]\n",
     "df_test[\"Absolute Error\"] = np.abs(df_test[\"Actual\"] - df_test[\"Predicted\"])\n",
-    "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100"
+    "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100\n",
+    "\n",
+    "# Best cases: Top 10 cases with smallest errors\n",
+    "df_test.sort_values(\"Absolute Error\").head(10)\n",
+    "\n",
+    "# Worst cases: Top 10 cases with largest errors\n",
+    "df_test.sort_values(\"Absolute Error\", ascending=False).head(10)"
    ]
   },
   {
