In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, add code to show typical cases

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3007,7 +3007,12 @@
     "df_test.sort_values(\"Absolute Error\").head(10)\n",
     "\n",
     "# Worst cases: Top 10 cases with largest errors\n",
-    "df_test.sort_values(\"Absolute Error\", ascending=False).head(10)"
+    "df_test.sort_values(\"Absolute Error\", ascending=False).head(10)\n",
+    "\n",
+    "# Typical cases: 10 cases closest to the mean error\n",
+    "mean_error = df_test[\"Absolute Error\"].mean()\n",
+    "df_test[\"Difference from Mean Error\"] = np.abs(df_test[\"Absolute Error\"] - mean_error)\n",
+    "print(df_test.sort_values(\"Difference from Mean Error\").head(10))"
    ]
   },
   {
