In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, add print statements

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3004,12 +3004,15 @@
     "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100\n",
     "\n",
     "# Best cases: Top 10 cases with smallest errors\n",
-    "df_test.sort_values(\"Absolute Error\").head(10)\n",
+    "print(\"Best cases:\")\n",
+    "print(df_test.sort_values(\"Absolute Error\").head(10))\n",
     "\n",
     "# Worst cases: Top 10 cases with largest errors\n",
-    "df_test.sort_values(\"Absolute Error\", ascending=False).head(10)\n",
+    "print(\"Worst cases:\")\n",
+    "print(df_test.sort_values(\"Absolute Error\", ascending=False).head(10))\n",
     "\n",
     "# Typical cases: 10 cases closest to the mean error\n",
+    "print(\"Typical cases:\")\n",
     "mean_error = df_test[\"Absolute Error\"].mean()\n",
     "df_test[\"Difference from Mean Error\"] = np.abs(df_test[\"Absolute Error\"] - mean_error)\n",
     "print(df_test.sort_values(\"Difference from Mean Error\").head(10))"
