In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, remove edge cases from examples

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2964,7 +2964,7 @@
     "Show illustrative examples of model predictions from test data to demonstrate performance on unseen data.  \n",
     "- Goal: Give stakeholders a clear picture of when the model performs well and when it struggles. \n",
     "- Recommendations: \n",
-    "    - Show 5-10 diverse examples: Best cases, worst cases, typical cases, and edge cases.\n",
+    "    - Show 5-10 diverse examples: Best cases, worst cases, and typical cases.\n",
     "    - Show 2-5 most important features, actual vs. predicted values, and errors.\n",
     "    - Add notes about any interesting patterns or edge cases observed.\n",
     "- Example table:\n",
@@ -2983,7 +2983,7 @@
    "id": "bfbb9e4a-e3f6-4107-ae0e-5ffe1d4fa3ac",
    "metadata": {},
    "source": [
-    "**Identify best, worst, typical, and edge cases**"
+    "**Identify best, worst, and typical cases**"
    ]
   },
   {
@@ -3012,9 +3012,9 @@
     "print(df_test.sort_values(\"Absolute Error\", ascending=False).head(10))\n",
     "\n",
     "# Typical cases: 10 cases closest to the mean error\n",
-    "print(\"Typical cases:\")\n",
     "mean_error = df_test[\"Absolute Error\"].mean()\n",
     "df_test[\"Difference from Mean Error\"] = np.abs(df_test[\"Absolute Error\"] - mean_error)\n",
+    "print(\"Typical cases:\")\n",
     "print(df_test.sort_values(\"Difference from Mean Error\").head(10))"
    ]
   },
@@ -3024,7 +3024,7 @@
    "metadata": {},
    "source": [
     "**Plot: Actual vs. Predicted Values**  \n",
-    "While individual examples (best, worst, typical, and edge cases) offer insights into individual scenarios, this plot provides context for understanding overall model performance and reveals trends like consistent underprediction or overprediction."
+    "While individual examples (best, worst, and typical cases) offer insights into individual scenarios, this plot provides context for understanding overall model performance and reveals trends like consistent underprediction or overprediction."
    ]
   },
   {
