In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, only select the 5 most important features

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -2993,8 +2993,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get top 5 most important features\n",
+    "# Note: Ensure feature_importance_df was created in the feature importance section \n",
+    "top5_features = feature_importance_df.sort_values(\"importance\", ascending=False).head(5)[\"feature\"]\n",
+    "\n",
     "# Combine X_test, y_test, and y_test_pred into one DataFrame\n",
-    "df_test = X_test.copy()\n",
+    "df_test = X_test[top5_features].copy()  # Only select the 5 most important features\n",
     "df_test[\"Actual\"] = y_test\n",
     "df_test[\"Predicted\"] = y_test_pred\n",
     "\n",
