In machine_learning_template.ipynb, in Modeling (Classification) > Final Model > Feature Importance section, extract feature importance scores for xgboost and plot them with seaborn

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -4315,29 +4315,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Mapping of feature names for better readability\n",
-    "feature_mapping = {\n",
-    "    \"f0\": \"feature_1\",\n",
-    "    \"f1\": \"feature_2\",\n",
-    "    \"f2\": \"feature_3\",\n",
-    "    \"f3\": \"feature_4\",\n",
-    "    \"f4\": \"feature_5\",\n",
-    "    \"f5\": \"feature_6\",\n",
-    "    \"f6\": \"feature_7\",\n",
-    "    \"f7\": \"feature_8\",\n",
-    "    \"f8\": \"feature_9\",\n",
-    "    \"f9\": \"feature_10\"\n",
-    "}\n",
+    "# Get the feature importances\n",
+    "# Note: final_model must be XGBoost model \n",
+    "importances = final_model.get_score(importance_type=\"gain\")\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "feature_importance_df = pd.DataFrame({\n",
+    "    \"feature\": list(importances.keys()),\n",
+    "    \"importance\": list(importances.values())\n",
+    "})\n",
+    "\n",
+    "# Sort features by importance\n",
+    "feature_importance_df = feature_importance_df.sort_values(\"importance\", ascending=False)\n",
     "\n",
     "# Create feature importance plot of the top 10 features\n",
-    "# Note: final_model must be an XGBoost model\n",
-    "xgb.plot_importance(final_model, max_num_features=10)\n",
-    "\n",
-    "# Map the feature names\n",
-    "plt.gca().set_yticklabels([feature_mapping.get(label.get_text(), label.get_text()) \n",
-    "                           for label in plt.gca().get_yticklabels()])\n",
-    "\n",
-    "# Show the plot\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.barplot(x=\"importance\", y=\"feature\", data=feature_importance_df.head(10), palette=\"colorblind\")\n",
+    "plt.title(\"Top 10 Feature Importances\")\n",
+    "plt.xlabel(\"Importance\")\n",
+    "plt.ylabel(\"Features\")\n",
+    "plt.tight_layout()\n",
     "plt.show()"
    ]
   },
