In machine_learning_template.ipynb, in Modeling (Regression) > Final Model > Model Prediction Examples, calculate error as predicted - actual value

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -3000,7 +3000,7 @@
     "df_test[\"Predicted\"] = y_test_pred\n",
     "\n",
     "# Calculate errors \n",
-    "df_test[\"Error\"] = df_test[\"Actual\"] - df_test[\"Predicted\"]\n",
+    "df_test[\"Error\"] = df_test[\"Predicted\"] - df_test[\"Actual\"]\n",
     "df_test[\"Absolute Error\"] = np.abs(df_test[\"Actual\"] - df_test[\"Predicted\"])\n",
     "df_test[\"Error (%)\"] = (df_test[\"Actual\"] - df_test[\"Predicted\"]) / df_test[\"Actual\"] * 100\n",
     "\n",
